--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           I am also known as Lewis :D
         </div>
         <div class="text-light lead animate3">
-          Gonna blame Covid on this one
+          Welcome
         </div>
       </div> 
           
@@ -132,6 +132,7 @@
             <div class="education-place large">
               Bromsgrove School, United Kingdom
             </div>
+            <div class="education-degree small">Sep 2012 - June 2016</div>
             <div class="education-degree lead">
               A Level and GCSE
             </div>
@@ -147,13 +148,16 @@
           </div>
         </div>
       </section>
-    <!-- Projects -->
-      <div id="projects" class="section-title my-3"></div>
-      <h1 class="section-title">
-        Projects
-      </h1>
-      <div class="section-title-line"></div>
 
+    <!-- Projects -->
+    <div id="projects" class="section-title my-3"></div>
+    <h1 class="section-title">Projects</h1>
+    <div class="section-title-line"></div>
+    
+    <div class="projects">
+      <div class="container"></div>
+      <div class="container"></div>
+    </div>
     <!-- Skills -->
     <div h1 id="skills" class="section-title my-3"></div>
     <h1 class="section-title"> Skills </h1>
@@ -183,15 +187,16 @@
       </section>
     </div>
     <!-- Contact -->
-    <section class="container">
 
-      <h1 id="contact" class="section-title">
-        Contact
-      </h1>
-      <div class="section-title-line"></div>
-      <a href="#"><i class="fab fa-linkedin fa-2x" aria-hidden="true"></i></a>
-      <a href="#"><i class="far fa-envelope fa-2x" aria-hidden="true"></i></a>
-      <a href="#"><i class="fab fa-github fa-2x" aria-hidden="true"></i></a>
-    </section>
+    <div h1 id="contact" class="section-title my-3"></div>
+    <h1 class="section-title"> Contact </h1>
+    <div class="section-title-line"></div>
+    <div class="contact">
+      <div class="container">
+        <a href="#"><i class="fab fa-linkedin fa-2x" aria-hidden="true"></i></a>
+        <a href="#"><i class="far fa-envelope fa-2x" aria-hidden="true"></i></a>
+        <a href="#"><i class="fab fa-github fa-2x" aria-hidden="true"></i></a>
+      </div>
+    </div>
   </body>
 </html>
