final 6 this is final

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <nav class="navbar">
       <h1>
-        <a href="index.html">Homepage </a>
+        <a href="index.html"><i class="fas fa-home"></i></a>
       </h1>
       <ul>
         <li><a href="#education">Education</a></li>
@@ -75,7 +75,7 @@
         
 
         <!-- logos -->
-        
+
         <div class="education-grid">
           <div class="education-logos">
             <div class="education-logo-imperial"></div>
