add docker pic + styling

--- a/index.html
+++ b/index.html
@@ -162,8 +162,10 @@
     <div class="projects">
 
       <div class="projects-1">
+        <div class="projects-title large">
         <a href="https://github.com/tsirimongkolkasem/mscproject" 
-        class="projects-title large" target="_blank">Dynamic Network Segmentation for Cyber-Defence</a>
+        target="_blank">Dynamic Network Segmentation for Cyber-Defence</a>
+        </div>
         <div class="projects-summary lead bold">Summary</div>
         <div class="projects-description small">
           Modelling and simulation of different network segmentation strategies.
